Fix a display bug about vertical alignment of an icon

--- a/wp-content/themes/distylight/assets/css/_contact.sass
+++ b/wp-content/themes/distylight/assets/css/_contact.sass
@@ -11,6 +11,8 @@
       color: black
       &, &:hover
         text-decoration: none
+      i
+        vertical-align: baseline
 
 .contact-page
   h4
